# hcomm

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .pre-commit-config.yaml  1603.diff  309.diff  3697d44b.diff  383.diff  3q  431.diff  46f85fb0.diff  764.diff  788.diff  812.diff  854.diff  953.diff  AGENTS.md  AGENTS_en.md  AllGather算子在A3集群上支持Pipeline流水优化算法.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_REVIEW_REPORT_1846449.md  CODE_REVIEW_REPORT_1846449_v2.md  CODE_REVIEW_REPORT_1846449_v3.md  CODE_REVIEW_REPORT_5707adec.md  CONTRIBUTING.md  CONTRIBUTING_en.md  OAT.xml  OWNERS  Profiling功能重构与DFX管理类设计文档.md  README.md  README_en.md  SECURITY.md  SECURITY_en.md  Third_Party_Open_Source_Software_List.yaml  Third_Party_Open_Source_Software_Notice  aicpu.diff  air.diff  (+29 more)
cltm/: CMakeLists.txt
cltm/src/: CMakeLists.txt  cltm.cc  rank_table.cc  rank_table.h  rank_table_pub.h
cmake/device/: CMakeLists.txt
experimental/base_comm/nic_plugin/: CMakeLists.txt  README.md  README_en.md  host_peer_ra_init.h  host_roce_plugin.cc  host_ub_plugin.cc  nic_plugin_ops.h  plugin_core.cc
llt_code/test/: CMakeLists.txt  README.md  run_test.sh
llt_code/test/hccl_api_single_thread_test/: CMakeLists.txt  hccl_api_base_test.h  ut_HcclAllReduce_API_test.cc  ut_HcclCommInitClusterInfo_API_test.cc  ut_HcclCommSetMemoryRange_API_test.cc  ut_HcclSend_API_test.cc
llt_code/test/hlt/: ranktable-2p.json
plugins/host_nic/: CMakeLists.txt  README.md  plugin_core.cc
plugins/host_nic/include/: channel.h  endpoint.h  hcomm_nic_plugin.h  host_nic_plugin_ops.h  host_peer_ra_init.h
plugins/host_nic/roce/: cpu_roce_endpoint.cc  cpu_roce_endpoint.h  exchange_data_format.h  exchange_rdma_conn_dto.h  host_cpu_roce_channel.cc  host_cpu_roce_channel.h  host_rdma_connection.cc  host_rdma_connection.h  host_roce_plugin.cc
plugins/host_nic/ub/: cpu_urma_endpoint.cc  cpu_urma_endpoint.h  host_cpu_urma_channel.cc  host_cpu_urma_channel.h  host_ub_plugin.cc
src/: CMakeLists.txt
src/algorithm/: CMakeLists.txt  OWNERS  hccl_alg.cmake
src/algorithm/base/: CMakeLists.txt
src/algorithm/impl/: CMakeLists.txt  alg_configurator.cc  alg_env_config.cc  coll_alg_utils.cc  coll_alg_utils.h  hccl_aiv.cc  hccl_aiv_device.cc  hccl_aiv_host.cc  hccl_alg.cc  hccl_alg_device.cc  topo_matcher.cc  topo_matcher.h
src/algorithm/pub_inc/: alg_cmd_type.h  alg_env_config.h  alg_profiling.h  alltoall_operator.h  coll_alg_operator.h  coll_alg_param.h  common.h  ffts_common_pub.h  hccl_aiv.h  hccl_alg.h  hccl_impl_pub.h
src/base_comm/: CMakeLists.txt  hcomm_res_mgr.cc  hcomm_res_mgr.h
src/base_comm/common/: CMakeLists.txt  comm_engine_utils.h  dlurma_function.h  irdma_connection.cc  irdma_connection.h  orion_adpt_utils.cc  orion_adpt_utils.h  protocol_utils.h  tp_mgr.cc  tp_mgr.h  tp_qos.h
src/base_comm/primitives/: CMakeLists.txt  CMakeLixt.txt  launch_context.cc  launch_context.h
src/base_comm/resource/: CMakeLists.txt  hcomm_res_mgr.cc
src/base_comm/resources/: CMakeLists.txt
src/coll_communicator/: CMakeLists.txt
src/coll_communicator/api_c_adpt/: CMakeLists.txt  coll_comm_c_adpt.cc  coll_comm_ccu_c_adpt.cc  coll_comm_profiling.cc  coll_comm_res_c_adpt.cc  coll_comm_res_c_adpt.h
src/coll_communicator/communicator/: CMakeLists.txt  coll_comm.cc  coll_comm.h
src/coll_communicator/dfx/: CMakeLists.txt  hcclCommDfx.cc  hcclCommDfx.h  hcclCommDfxLite.cc  hcclCommDfxLite.h  hcclCommOp.cc  hcclCommOp.h
src/coll_communicator/rank_graphs/: rank_graph_v2.h
src/coll_communicator/resource_mgr/: CMakeLists.txt
src/coll_communicator_mgr/: CMakeLists.txt
src/coll_communicator_mgr/api_c_adpt/: CMakeLists.txt  coll_comm_c_adpt.cc  coll_comm_ccu_c_adpt.cc  coll_comm_profiling.cc  coll_comm_profiling.h  coll_comm_res_c_adpt.cc  coll_comm_res_c_adpt.h  rank_graph_c_adpt.cc
src/coll_communicator_mgr/comm_dfx/: hcclCommDfx.cc
src/coll_communicator_mgr/common/: CMakeLists.txt
src/coll_communicator_mgr/communicator/: CMakeLists.txt  coll_comm.cc  coll_comm.h  independent_op.cc  independent_op.h
src/coll_communicator_mgr/config_mgr/: CMakeLists.txt  coll_comm_config.cc  coll_comm_config.h
src/common/: CMakeLists.txt  buffer_key.h  enum_utils.h  universal_concurrent_map.h
src/common/health/: CMakeLists.txt  (+7 more)
src/framework/: CMakeLists.txt  OWNERS  aicpu_custom.cmake  ccl_kernel.cmake  hcomm.cmake
src/hccd/: CMakeLists.txt  hccd.cc  hccd_comm.cc  hccd_impl_pml.cc  hccd_impl_pml.h  hccl_comm_conn.cc  hccl_comm_conn.h  hccl_comm_conn_mgr.cc  hccl_comm_conn_mgr.h  hccl_raw.cc
src/legacy/: CMakeLists.txt  ccl_dpu.cmake  hccl_v2.cmake
src/orion/: CMakeLists.txt  include
src/platform/: CMakeLists.txt  ccl_kernel_plf.cmake  hccl_plf.cmake
src/pub_inc/: adapter_error_manager_pub.h  adapter_hccp_common.h  adapter_rts_common.h  aicpu_operator_pub.h  device_capacity.h  dispatcher.h  dispatcher_task_types.h  dtype_common.h  externalinput_pub.h  hccl_common.h  hccl_device.h  hccl_ip_address.h  hccl_mem_defs.h  hccl_network_pub.h  hccl_socket.h  hccn_rping.h  hcomm_profiler.h  hdc_pub.h  heterog_mem_blocks_manager_pub.h  local_notify.h  log.h  mem_device_pub.h  memory_alloc_ring.h  mr_manager.h  remote_access.h  sal_pub.h  stream_pub.h  timer.h  transport_heterog_def.h  transport_pub.h  workflow_pub.h
test/hccl_api_single_thread_test/: CMakeLists.txt  README.md  hccl_api_base_test.cc  hccl_api_base_test.h  main.cc  ut_HcclAllGatherV_API_test.cc  ut_HcclAlltoAll_API_test.cc  ut_HcclBatchSendRecv_API_test.cc  ut_HcclBroadcast_API_test.cc  ut_HcclCommChannel_API_test.cc  ut_HcclCommEngineCtx_API_test.cc  ut_HcclCommInitRootInfoConfig_API_test.cc  ut_HcclCommRegMem_API_test.cc  ut_HcclReduceScatterV_API_test.cc  ut_HcclReduce_API_test.cc  ut_HcclScatter_API_test.cc
test/hccl_vm/: .gitignore  CMakeLists.txt  README.md  README_en.md  build.sh  build_pkg.sh  hccl_vm_install.sh  hccl_vm_installer  install.sh
test/hlt/: CMakeLists.txt  README.md  hccl_fwk_test.cpp  hcomm_test.cpp  ranktable.json
test/ut/: CMakeLists.txt  hccl_comm_task_exception_test.cc
test_v2/: CMakeLists.txt
test_v2/ut/: CMakeLists.txt
(+14019 files in other folders)
